--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
 1. DONE .React DOM client side routing with Link component
 2. SWR library
-3. Context API
+3. DONE. Context API
 4. Suztand State Management Library
 5. NextJS
